[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides real-time weather alerts and forecasts for US locations using the National Weather Service API."
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "uagents[mcp]>=0.22.5",
]
